# quizumi

./: .env.example  README.md  lint.sh  pyproject.toml  quizumi.py  requirements.txt
current_segment/: en_segment.srt  jp_segment.srt
src/: quiz_agent.py  run_quiz_agent.py  video_player.py
